--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src = ""
+      <img src = "images/transportation/transit.jpg" alt = 'trasit'>
+      
     </div>
   </div>
 </body>
